# TableSched-SaaS

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: Makefile  pyproject.toml
backend/apps/api_access/: apps.py  middleware.py  models.py  permissions.py  views.py
backend/apps/billing/: apps.py  models.py  permissions.py  services.py  views.py
backend/apps/billing/migrations/: 0001_initial.py  0003_tenant_lifecycle_event.py
backend/apps/platform/: models.py  serializers.py  services.py  urls.py  views.py  views_me.py
backend/apps/platform/migrations/: 0001_initial.py
backend/apps/sms/: apps.py  models.py  protocol.py  router.py  tasks.py  urls.py
backend/apps/sms/migrations/: 0001_initial.py
backend/apps/sms/providers/infobip/: .env.example  adapter.py
backend/apps/sms/providers/smsapi/: .env.example  adapter.py
backend/apps/sms/providers/twilio/: .env.example  adapter.py
backend/apps/sms/webhooks/: infobip.py  smsapi.py  twilio.py
backend/config/: urls.py  urls_public.py
backend/config/settings/: base.py  dev.py  prod.py  test.py
backend/tests/: test_tenant_routing.py
backend/tests/platform/: conftest.py  test_me.py
backend/tests/sms/: test_adapters.py  test_delivery_rate_task.py  test_dlr_webhooks.py  test_router.py
config/: urls.py
docs/: ARCHITECTURE_OVERVIEW.md  TAMAGUI_TOKENS.md  UX-critique-report.md  adr-001-session-vs-jwt-authentication.md  me-endpoint-analysis.md
frontend/: app.json  babel.config.cjs  eslint.config.mjs  expo-router-ctx.js  jest.config.cjs  jest.setup.js  jest.setup.msw.js  metro.config.cjs  (+6 more)
(+156 files in other folders)
