[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*", "config*"]

[project]
name = "tablesched-saas"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "tablesched-backend",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-django",
  "pytest-xdist",
  "ruff",
  "mypy",
  "django-stubs[compatible-mypy]",
  "responses",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
